--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -56,6 +56,15 @@ jobs:
     - name: Disable kurtosis analytics
       if: matrix.deploy_infra
       run: kurtosis analytics disable
+      
+    - name: Debug CI Runner Directory & Files
+      run: |
+        echo "📂 Current Working Directory:"
+        pwd
+        echo "📄 Listing all files in the repository:"
+        ls -la
+        echo "📄 Listing core/scripts/:"
+        ls -la core/scripts/
 
     - name: Deploy Kurtosis Devnet
       if: matrix.deploy_infra
