feat: adding prover stress contract

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,5 @@ src = "core/contracts"
 out = "compiled-contracts"
 libs = []
 via_ir = true
+ignored_warnings_from = ["core/contracts/claimmock/ClaimMock.sol", "core/contracts/claimmockcaller/ClaimMockCaller.sol"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
