--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -13,33 +13,20 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - network: "fork9-cdk-validium"
-            filter_tags: "light,batch-verification,danger,access-list"
-            deploy_infra: true
-            gas_token_addr: "0x72ae2643518179cF01bcA3278a37ceAD408DE8b2"
-
-          - network: "fork11-rollup"
+          - network: "fork9-cdk-erigon-validium"
+            filter_tags: "light"
+          - network: "fork11-cdk-erigon-rollup"
+            filter_tags: "batch-verification,eoa,erc20,access-list"
+          - network: "fork12-cdk-erigon-validium"
+            filter_tags: "heavy,uniswap,zk-counters"
+          - network: "fork12-cdk-erigon-rollup"
             filter_tags: "all"
-            deploy_infra: true
-
-          - network: "fork12-cdk-validium"
-            filter_tags: "light,batch-verification,erc20-tests,heavy,zk-counters-tests"
-            deploy_infra: true
-
-          - network: "fork12-rollup"
-            filter_tags: "light,batch-verification,eoa-transaction,heavy,zk-counters-tests"
-            deploy_infra: true
 
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Install Dependencies
-      run: |
-        pip3 install yq
-        yq --version
 
     - name: Install Kurtosis
       if: matrix.deploy_infra
@@ -53,15 +40,75 @@ jobs:
       if: matrix.deploy_infra
       run: kurtosis analytics disable
 
-    - name: Deploy Kurtosis Devnet
-      if: matrix.deploy_infra
-      run: ./core/helpers/setup-kurtosis.sh "${{ matrix.network }}"
+    - name: Install yq
+      run: |
+        pip3 install yq
+        yq --version
 
-    - name: Install runner
-      run: make install-runner
+    - name: Install polycli
+      run: |
+        POLYCLI_VERSION=$(curl -s https://api.github.com/repos/0xPolygon/polygon-cli/releases/latest | jq -r '.tag_name')
+        tmp_dir=$(mktemp -d) 
+        curl -L "https://github.com/0xPolygon/polygon-cli/releases/download/${POLYCLI_VERSION}/polycli_${POLYCLI_VERSION}_linux_amd64.tar.gz" | tar -xz -C "$tmp_dir" 
+        mv "$tmp_dir"/* /usr/local/bin/polycli 
+        rm -rf "$tmp_dir"
+        sudo chmod +x /usr/local/bin/polycli
+        /usr/local/bin/polycli version
+
+    - name: Install foundry
+      uses: foundry-rs/foundry-toolchain@v1
+
+    - name: Install Go
+      uses: actions/setup-go@v5
+      with:
+        go-version: 1.22.11
+      env:
+        GOARCH: "amd64"
+
+    - name: Checkout Kurtosis CDK
+      if: matrix.deploy_infra
+      uses: actions/checkout@v4
+      with:
+        repository: 0xPolygon/kurtosis-cdk
+        path: "kurtosis-cdk"
+        ref: "v0.2.25"
+
+    - name: Setup Bats and bats libs
+      uses: bats-core/bats-action@2.0.0
+
+    - name: Setup Devnet w/ Kurtosis
+      run: |
+        pwd
+        ./core/helpers/setup-kurtosis.sh "${{ matrix.network }}"
+        
+    - name: Export L2_RPC_URL for CI
+      run: |
+        echo "✅ Using Kurtosis RPC URL: $L2_RPC_URL"
+        echo "L2_RPC_URL=$L2_RPC_URL" >> "$GITHUB_ENV"
+
+    - name: Build polygon-test-runner
+      run: |
+        pwd
+        make install
 
     - name: Run E2E Tests
-      run: polygon-test-runner --filter-tags "${{ matrix.filter_tags }}"
-      env:
-        GAS_TOKEN_ADDR: ${{ matrix.gas_token_addr }}
-        L2_RPC_URL: ${{ env.L2_RPC_URL }}
+      run: |
+        polygon-test-runner --filter-tags "${{ matrix.filter_tags }}"
+  
+    - name: Dump enclave logs
+      if: failure() && matrix.deploy_infra
+      run: kurtosis dump ./dump
+
+    - name: Generate archive name
+      if: failure() && matrix.deploy_infra
+      run: |
+        archive_name="dump_run_with_args_${{ matrix.network }}_${{ github.run_id }}"
+        echo "ARCHIVE_NAME=${archive_name}" >> "$GITHUB_ENV"
+        kurtosis service exec cdk cdk-node-001 'cat /etc/cdk/cdk-node-config.toml' > ./dump/cdk-node-config.toml
+
+    - name: Upload logs
+      if: failure() && matrix.deploy_infra
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.ARCHIVE_NAME }}
+        path: ./dump
