--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -29,7 +29,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Kurtosis
-      if: matrix.deploy_infra
       run: |
         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
         sudo apt update
@@ -37,7 +36,6 @@ jobs:
         kurtosis version
 
     - name: Disable kurtosis analytics
-      if: matrix.deploy_infra
       run: kurtosis analytics disable
 
     - name: Install yq
@@ -66,7 +64,6 @@ jobs:
         GOARCH: "amd64"
 
     - name: Checkout Kurtosis CDK
-      if: matrix.deploy_infra
       uses: actions/checkout@v4
       with:
         repository: 0xPolygon/kurtosis-cdk
@@ -96,18 +93,18 @@ jobs:
         polygon-test-runner --filter-tags "${{ matrix.filter_tags }}"
   
     - name: Dump enclave logs
-      if: failure() && matrix.deploy_infra
+      if: failure()
       run: kurtosis dump ./dump
 
     - name: Generate archive name
-      if: failure() && matrix.deploy_infra
+      if: failure()
       run: |
         archive_name="dump_run_with_args_${{ matrix.network }}_${{ github.run_id }}"
         echo "ARCHIVE_NAME=${archive_name}" >> "$GITHUB_ENV"
         kurtosis service exec cdk cdk-node-001 'cat /etc/cdk/cdk-node-config.toml' > ./dump/cdk-node-config.toml
 
     - name: Upload logs
-      if: failure() && matrix.deploy_infra
+      if: failure()
       uses: actions/upload-artifact@v4
       with:
         name: ${{ env.ARCHIVE_NAME }}
