feat: adding lib

--- a/foundry.toml
+++ b/foundry.toml
@@ -1,7 +1,7 @@
 [profile.default]
 src = "core/contracts"
 out = "compiled-contracts"
-libs = []
+libs = ["lib"]
 via_ir = true
 ignored_warnings_from = ["core/contracts/claimmock/ClaimMock.sol", "core/contracts/claimmockcaller/ClaimMockCaller.sol"]
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
