remove deploy-infra condition for now, since tests are completely coupled to kurtosis

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -15,40 +15,31 @@ jobs:
         include:
           - network: "fork9-cdk-erigon-validium"
             bats_tests: "light/batch-verification.bats,danger/access-list-e2e.bats"
-            deploy_infra: true
             gas_token_addr: "0x72ae2643518179cF01bcA3278a37ceAD408DE8b2"
 
           - network: "fork9-cdk-validium"
             bats_tests: "heavy/zk-counters-tests.bats"
-            deploy_infra: true
 
           - network: "fork11-rollup"
             bats_tests: "all"
-            deploy_infra: true
 
           - network: "fork11-rollup"
             bats_tests: "light/batch-verification.bats,light/eoa-transaction.bats"
-            deploy_infra: true
 
           - network: "fork11-rollup"
             bats_tests: "heavy/zk-counters-tests.bats"
-            deploy_infra: true
 
           - network: "fork12-rollup"
             bats_tests: "all"
-            deploy_infra: true
 
           - network: "fork12-cdk-validium"
             bats_tests: "light/batch-verification.bats,light/erc20-tests.bats,heavy/zk-counters-tests.bats"
-            deploy_infra: true
 
           - network: "fork12-cdk-validium"
             bats_tests: "heavy/zk-counters-tests.bats"
-            deploy_infra: true
 
           - network: "fork12-rollup"
             bats_tests: "examples/tagged-test.bats"
-            deploy_infra: false
 
           - network: "fork12-rollup"
             bats_tests: "examples/tagged-test.bats"
@@ -70,7 +61,6 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Install Kurtosis
-      if: matrix.deploy_infra
       run: |
         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
         sudo apt update
@@ -78,7 +68,6 @@ jobs:
         kurtosis version
 
     - name: Disable kurtosis analytics
-      if: matrix.deploy_infra
       run: kurtosis analytics disable
 
     - name: Install yq
@@ -107,7 +96,6 @@ jobs:
         GOARCH: "amd64"
 
     - name: Checkout Kurtosis CDK
-      if: matrix.deploy_infra
       uses: actions/checkout@v4
       with:
         repository: 0xPolygon/kurtosis-cdk
@@ -118,13 +106,11 @@ jobs:
       uses: bats-core/bats-action@2.0.0
 
     - name: Setup Devnet w/ Kurtosis
-      if: matrix.deploy_infra
       run: |
         pwd
         ./core/helpers/setup-kurtosis.sh "${{ matrix.network }}"
         
     - name: Export L2_RPC_URL for CI
-      if: matrix.deploy_infra
       run: |
         pwd
         echo "✅ Using Kurtosis RPC URL: $L2_RPC_URL"
@@ -152,18 +138,18 @@ jobs:
         polygon-test-runner --filter-tags "${{ matrix.filter_tags }}"
   
     - name: Dump enclave logs
-      if: failure() && matrix.deploy_infra
+      if: failure()
       run: kurtosis dump ./dump
 
     - name: Generate archive name
-      if: failure() && matrix.deploy_infra
+      if: failure()
       run: |
         archive_name="dump_run_with_args_${{ matrix.network }}_${{ github.run_id }}"
         echo "ARCHIVE_NAME=${archive_name}" >> "$GITHUB_ENV"
         kurtosis service exec cdk cdk-node-001 'cat /etc/cdk/cdk-node-config.toml' > ./dump/cdk-node-config.toml
 
     - name: Upload logs
-      if: failure() && matrix.deploy_infra
+      if: failure()
       uses: actions/upload-artifact@v4
       with:
         name: ${{ env.ARCHIVE_NAME }}
