--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -32,12 +32,18 @@ jobs:
             env:
               KURTOSIS_ENCLAVE: "op"
               L2_SENDER_PRIVATE_KEY: "0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80"
+              
+          # ✅ Custom AggLayer Image, example
+          - network: "fork12-cdk-erigon-validium"
+            filter_tags: "batch-verification,gas-limit-overflow,access-list"
+            custom_agglayer_image: "ghcr.io/agglayer/agglayer:0.3.0-rc.2"
 
     runs-on: ubuntu-latest
     timeout-minutes: 30
     env: 
       KURTOSIS_ENCLAVE: ${{ matrix.env.KURTOSIS_ENCLAVE || 'cdk' }}
       L2_SENDER_PRIVATE_KEY: ${{ matrix.env.L2_SENDER_PRIVATE_KEY || '0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625' }}
+      CUSTOM_AGGLAYER_IMAGE: ${{ matrix.custom_agglayer_image || 'ghcr.io/agglayer/agglayer:latest' }}
 
     steps:
     - name: Checkout code
