--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -43,7 +43,7 @@ jobs:
     env: 
       KURTOSIS_ENCLAVE: ${{ matrix.env.KURTOSIS_ENCLAVE || 'cdk' }}
       L2_SENDER_PRIVATE_KEY: ${{ matrix.env.L2_SENDER_PRIVATE_KEY || '0x12d7de8621a77640c9241b2595ba78ce443d05e94090365ab3bb5e19df82c625' }}
-      CUSTOM_AGGLAYER_IMAGE: ${{ matrix.custom_agglayer_image || 'ghcr.io/agglayer/agglayer:latest' }}
+      CUSTOM_AGGLAYER_IMAGE: ${{ matrix.custom_agglayer_image || '' }}
 
     steps:
     - name: Checkout code
