--- a/action.yml
+++ b/action.yml
@@ -65,7 +65,7 @@ runs:
       with:
         repository: 0xPolygon/kurtosis-cdk
         path: kurtosis-cdk
-        ref: ${{ inputs.kurtosis-cdk-ref }}
+        ref: dan/agglayer_toml_fix
 
     - name: Load AggLayer Docker Image
       shell: bash
