--- a/action.yml
+++ b/action.yml
@@ -60,7 +60,7 @@ runs:
       with:
         go-version: 1.22.11
 
-    - name: Checkout Kurtosis CDK
+    - name: Checkout Kurtosis CDK with agglayer fix
       uses: actions/checkout@v4
       with:
         repository: 0xPolygon/kurtosis-cdk
