--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ runs:
       with:
         repository: agglayer/e2e
         path: e2e-repo  # Checkout into a subfolder to prevent conflicts
+        ref: dan/shared_git_action
 
     - name: Install Kurtosis
       shell: bash
@@ -65,7 +66,7 @@ runs:
       with:
         repository: 0xPolygon/kurtosis-cdk
         path: kurtosis-cdk
-        ref: main
+        ref: dan/agglayer_toml_fix
 
     - name: Load AggLayer Docker Image
       shell: bash
@@ -124,6 +125,7 @@ runs:
       if: failure()
       shell: bash
       run: |
+        kurtosis service logs cdk debug-agglayer-config -a
         kurtosis dump ./dump
         archive_name="dump_${{ inputs.network }}_${{ github.run_id }}_${{ strategy.job-index }}"
         echo "ARCHIVE_NAME=${archive_name}" >> $GITHUB_ENV
