--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -9,6 +9,9 @@ on:
   workflow_dispatch: {}
 
 jobs:
+  call-cdk-e2e:
+    uses: ./.github/workflows/cdk-e2e.yml
+
   test-e2e:
     strategy:
       fail-fast: false
