--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -36,20 +36,14 @@ on:
         type: string
         default: "cdk"
 
-      docker_archive:
-        description: "An unpublished docker image archive to be used to over ride one of the default kurtosis images (e.g. /tmp/docker-image.tar)"
-        required: false
-        type: string
-        default: ""
-
       docker_image_override:
-        description: "The docker image in kurtosis that will be overriden by the docker_archive (e.g. agglayer_image)"
+        description: "The docker image in kurtosis that will replaced with a local tag (e.g. agglayer_image)"
         required: false
         type: string
         default: ""
 
       docker_tag:
-        description: "Assuming a docker_archive is specified, the docker_tag species the associated tag (e.g. busybox:latest)"
+        description: "A local docker tag to be used as the image for a particular service in kurtosis (e.g. agglayer:local)"
         required: false
         type: string
         default: ""
@@ -93,16 +87,11 @@ jobs:
 
       - name: Write args input to a file
         run: |
-          docker_archive='${{ inputs.docker_archive }}'
-          if [[ $docker_archive == "" ]]; then
+          docker_tag='${{ inputs.docker_tag }}'
+          if [[ $docker_tag == "" ]]; then
               echo '${{ inputs.kurtosis_cdk_args }}' | tee /tmp/kurtosis-args.json
               exit
           fi
-          if [[ ! -e $docker_archive ]]; then
-              echo "The docker archive at $docker_archive is missing"
-              exit 1
-          fi
-          docker load --input "$docker_archive"
           echo '${{ inputs.kurtosis_cdk_args }}' | jq --arg img ${{ inputs.docker_image_override }} --arg tag ${{ inputs.docker_tag }} '.args[$img] = $tag' | tee /tmp/kurtosis-args.json
 
       - name: Startup the kurtosis-cdk package
