--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -18,7 +18,7 @@ on:
           {
             "deployment_stages": {
               "deploy_l2_contracts": true,
-              "deploy_cdk_bridge_ui": false,
+              "deploy_cdk_bridge_ui": false
             },
             "args": {
               "consensus_contract_type": "pessimistic",
