--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -50,7 +50,7 @@ on:
 
 jobs:
   run-kurtosis-image:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest-16-cores
     steps:
       - name: Checkout agglayer-e2e
         uses: actions/checkout@v4
